<resources>
<!--    <string name="app_name">9miao</string>-->

    <string name="app_name">AI MARS</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_update_profile">Update Profile</string>
    <string name="action_logout">Logout</string>
    <string name="action_report">Report</string>
    <string name="action_block">Block</string>
    <string name="action_delete">Delete</string>

    <string name="action_debug" translatable="false">Debug</string>

    <string name="hola">hola</string>
    <string name="username">username</string>
    <string name="logo_text">welcome!</string>

    <string name="matched">matched</string>

    <string name="mlgb" translatable="false">mlgb</string>
    <string name="mlgb2" translatable="false">mlgb2</string>
    <string name="phone11" translatable="false">phone_11</string>

    <string name="cell">Input phone number</string>

    <!-- Phone number activity -->
    <string name="phone_number_cant_be_empty">Phone number can\'t be empty</string>
    <string name="phone_number_too_long">Phone number is too long</string>

    <!-- Access code activity -->
    <string name="incorrect_code">Incorrect code, please try again</string>
    <string name="fail_to_send_code">Fail to send code, please try again</string>

    <string name="general_error">Something went wrong, please try again</string>

    <!-- MyDtailsActivity -->
    <string name="name_error">Name cannot be empty</string>

    <string name="go" translatable="false">GO</string>
    <string name="send_code">Send code</string>
    <string name="resend">Didn\'t get it? Resend code</string>

    <string name="confirm_access_code">Input access code</string>

    <string name="name">name</string>
    <string name="age">age</string>
    <string name="gender">gender</string>
    <string name="male">male</string>
    <string name="female">female</string>

    <string name="debug" translatable="false">enableDebug</string>

    <string name="otherside">Otherside</string>

    <!-- permissions -->
    <string name="permission_dialog_header">Request for permission</string>
    <string name="permission_dialog_message_audio_camera">9miao needs to use your camera and microphone.</string>
    <string name="permission_dialog_message_phone">Allow 9miao to know your phone number?</string>
    <string name="permission_access_fine_location">9miao needs to know your phone location.</string>
    <string name="to_settings">To Settings</string>
    <string name="cancel">Cancel</string>

    <string name="rejected">&#160;rejected</string>
    <string name="matching_you_with">matching you with </string>
    <string name="connected_to">Connected to </string>
    <string name="hang_up">&#160;hung up.</string>

    <!-- privacy -->
    <string name="privacy">Privacy Policy</string>
    <string name="report_dialog_header">Report</string>
    <string name="nudity">nudity</string>
    <string name="violence">violence</string>
    <string name="report_reason">Please choose at least one reason.</string>
    <string name="no_one_to_report">No one to report.</string>
    <string name="report_success">Report success!</string>

    <string name="chat">Chat</string>
    <string name="video">Video</string>
    <string name="add_friend">add</string>

    <!-- bottom nav tab -->
    <string name="conversation">conversation</string>
    <string name="contacts">contacts</string>
    <string name="discover">discover</string>

    <string name="requested">Requested</string>
    <string name="request_fail">Request failed, try again later</string>
    <string name="approve">approve</string>
    <string name="blocked">Blocked</string>
    <string name="block_success">Block success!</string>
    <string name="delete_success">Delete success!</string>

    <string name="pending">Pending</string>
    <string name="search_title">search</string>
    <string name="add_success">Add success!</string>

    <string name="search_user_hint">Search by user ID</string>

    <string name="no_user_found">No user found!</string>

    <string name="send">Send</string>
    <string name="avatar_update_success">Avatar update success!</string>
    <string name="avatar_update_failure">Avatar update failure, check your network!</string>

    <!-- AI update-->
    <string name="welcome_header">Welcome to AI Mars</string>
    <string name="login_to_continue">Login in to continue</string>
    <string name="enter_your_mobile_number">Enter your \nmobile number</string>
    <string name="we_will_send_verification_code">We will send you verification code</string>
    <string name="we_will_send_to">We sent it to the number </string>
    <string name="next">Next</string>
    <string name="did_not_get_code">Didn\'t receive any code? </string>
    <string name="resend_code">Resend Code</string>
    <string name="verification_resent">The verification code is resent</string>
    <string name="something_went_wrong">Something went wrong, try again later</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
</resources>
