<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <CheckBox
            android:id="@+id/debug"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/debug"/>
    </LinearLayout>

    <TextView
        android:id="@+id/header"
        style="@style/OnboardingText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/onboarding_vertical_margin"
        android:text="@string/cell"/>

    <ImageView
        android:id="@+id/flags"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_below="@+id/header"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/onboarding_vertical_margin"
        android:src="@drawable/coolcat"/>

    <EditText
        android:id="@+id/phone_number"
        style="@style/OnboardingInputText"
        android:layout_below="@+id/flags"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/onboarding_vertical_margin"
        android:inputType="phone"/>

    <Button
        style="@style/OnboardingButton"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/phone_number"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/onboarding_vertical_margin"
        android:onClick="clickGo"
        android:text="@string/send_code"/>
</RelativeLayout>