<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginBottom="@dimen/profile_item_vertical_paddings"
        android:layout_marginTop="50dp"
        android:src="@drawable/cat_head"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="0dp"
            android:gravity="center_horizontal"
            android:text="@string/mlgb"
            android:textSize="40sp"/>

        <ImageView
            android:id="@+id/gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="0dp"
            android:layout_marginStart="10dp"
            android:src="@drawable/male"/>
    </LinearLayout>

    <TextView
        android:id="@+id/age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_columnSpan="2"
        android:layout_marginBottom="@dimen/profile_item_vertical_paddings"
        android:layout_marginTop="@dimen/profile_item_vertical_paddings"
        android:gravity="center_horizontal"
        android:text="23"
        android:textSize="30sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Button
            android:id="@+id/chat_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="0dp"
            android:onClick="chat"
            android:text="@string/chat"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/video_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="0dp"
            android:layout_marginStart="10dp"
            android:onClick="video"
            android:text="@string/video"
            android:textSize="20sp"/>
    </LinearLayout>


    <Button
        android:id="@+id/add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="add"
        android:text="@string/add_friend"
        android:textSize="20sp"/>

</LinearLayout>